fix z-index

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3618,7 +3618,7 @@ button:focus {
 
 .header__box--friday {
   position: relative;
-  z-index: 20;
+  z-index: 21;
 }
 
 .h-content__subtitle--friday {
