--- a/app/sass/pages/_main.sass
+++ b/app/sass/pages/_main.sass
@@ -1498,7 +1498,7 @@ button
     width: 100%
 .header__box--friday
   position: relative
-  z-index: 20    
+  z-index: 21
 .h-content
   &__subtitle
     &--friday
